tests/ui/coverage-attr/subword.stderr
error: malformed `coverage` attribute input
  --> $DIR/subword.rs:7:1
   |
LL | #[coverage(yes(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:10:1
   |
LL | #[coverage(no(milord))]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:13:1
   |
LL | #[coverage(yes = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: malformed `coverage` attribute input
  --> $DIR/subword.rs:16:1
   |
LL | #[coverage(no = "milord")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[coverage(off)]
   | ~~~~~~~~~~~~~~~~
LL | #[coverage(on)]
   | ~~~~~~~~~~~~~~~

error: aborting due to 4 previous errors

